@@ -1,6 +1,6 @@
 Package: lme4
 Version: 0.95-2
-Date: 2005-04-03
+Date: 2005-04-05
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
